fixed index alignment on mobile browsers

--- a/styles.css
+++ b/styles.css
@@ -82,4 +82,7 @@ img {
   .recipe {
       flex: 1 1 100%;
     }
+  .recipe-container{
+    margin-left: 0%;
+  }
 }
